Chavvy attempt to fix single pixel white line on iphone

--- a/css/video-test.css
+++ b/css/video-test.css
@@ -96,7 +96,7 @@ html, body {
 .rainbow {
 	background-image: url("../img/Frac_webpage_gradientstrip.png");
 	background-size: contain;
-	height: 2px;
+	height: 3px;
 	z-index: 3;
 	width: 100%;
 }
